# we-layerd

./: Cargo.toml  README.md  config.example.toml  config.toml
apps/we-gui/: Cargo.toml
apps/we-gui/assets/: we-gui.desktop
apps/we-gui/src/: main.rs  settings_panel.rs  tray.rs
contrib/gnome-shell-extension/: README.md
contrib/gnome-shell-extension/we-layerd@aromatic/: extension.js  gnomeShellOverride.js  metadata.json  videoRenderer.js  wallpaper.js  windowManager.js
contrib/gnome-shell-extension/we-layerd@aromatic/renderer/: renderer.js
crates/we-core/: Cargo.toml
crates/we-core/src/: config.rs  lib.rs  steam.rs  wallpaper.rs
docs/: ADVANCED.md  ADVANCED.zh-CN.md  ARCHITECTURE.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  README.zh-CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md
src/: app.rs  cgroup.rs  cli.rs  config.rs  display_isolation.rs  gnome.rs  ipc.rs  logging.rs  main.rs  wm_visibility.rs
src/video/: decoder.rs
src/wayland/: layer_shell.rs  mod.rs  outputs.rs  render_wgpu.rs
src/wine/: launcher.rs
src/x11/: capture_xcomposite.rs  mod.rs  window_finder.rs  window_input.rs
