[package]
name = "we-layerd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wgpu = "0.20"
x11rb = { version = "0.13", features = ["composite", "xfixes", "damage"] }
